<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MavRide</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_registration">MavRide</string>
    <string name="title_activity_main_activity2">MainActivity2</string>
    <string name="title_activity_main">MavRide</string>
    <string name="button_forgot_password">Forgot Password</string>
    <string name="MavRides_image"></string>
    <string name="hint_new_password">Enter new password ( 6 digits)</string>
    <string name="hint_new_password_confirm">Confirm you password</string>
    <string name="set_password_button">Set Password</string>
    <string name="Heading"></string>
    <string name="title_activity_login">MavRide</string>
    <string name="title_activity_user_home">MavRide</string>
    <string name="title_activity_driver_home">DriverHome</string>
    <string name="title_activity_driver_home_page">MavRide</string>
    <string name="title_activity_driver_options">MavRide</string>
    <string name="title_activity_forgot_password_form">MavRide</string>
    <string name="hint_email">Enter your @mavs.uta.edu email</string>
    <string name="activity_title_forgot_password">Forgot Password?</string>
    <string name="hint_reset_code">Enter 4 digit code from email</string>
    <string name="button_have_code">Have a code?</string>
    <string name="button_send_code">Send Email</string>
    <string name="title_activity_set_new_password">Set New Password</string>
    <string name="Name">Name</string>
    <string name="Destination">Destination</string>
    <string name="title_activity_driver_timer">DriverTimer</string>
    <string name="title_activity_help">MavRide</string>
    <string name="title_activity_bridge_drop_location">MavRide</string>

</resources>
