<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.dell.mavride.setNewPasswordActivity"
    android:showDividers="middle"
    android:divider="?android:attr/dividerHorizontal"
>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:fontFamily="sans-serif"
        android:id="@+id/newPasswordEditText"
        android:layout_centerHorizontal="true"
        android:hint="@string/hint_new_password"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/newPasswordConfirmEditText"
        android:inputType="textPassword"
        android:fontFamily="sans-serif"
        android:layout_centerHorizontal="true"
        android:hint="@string/hint_new_password_confirm"
        android:layout_below="@+id/newPasswordEditText"/>
    <LinearLayout style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/newPasswordConfirmEditText"
        android:orientation="horizontal">

        <Button style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Cancel"
            android:onClick="onClickCancel"
            />

        <Button style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/set_password_button"
            android:onClick="onClickSetPassword"
            />
    </LinearLayout>

</RelativeLayout>
